# ckanext-files

./: .editorconfig  .gitignore  .pre-commit-config.yaml  404.html  CHANGELOG.md  LICENSE  MANIFEST.in  Makefile  README.md  cliff.toml  cypress.config.ts  index.html  mkdocs.yml  objects.inv  package-lock.json  package.json  pyproject.toml  search.html  setup.cfg  setup.py  sitemap.xml  test.ini  tsconfig.json  vite.config.ts
.github/workflows/: cypress.yml  release.yml  test.yml  typing.yml
api/: index.html
changelog/: index.html
ckanext/file_manager/: col_renderers.py  collection.py  plugin.py  views.py
ckanext/file_manager/assets/: webassets.yml
ckanext/file_manager/assets/js/: fm-htmx.js
ckanext/file_manager/templates/file_manager/: list.html  record.html  upload_file_modal.html  upload_file_modal_form.html
ckanext/file_upload_widget/: gulpfile.js  helpers.py  package-lock.json  package.json  plugin.py
ckanext/file_upload_widget/assets/: webassets.yml
ckanext/file_upload_widget/assets/css/: styles.css
ckanext/file_upload_widget/assets/js/: file-upload-widget.js
ckanext/file_upload_widget/logic/: action.py
ckanext/file_upload_widget/theme/: styles.scss
ckanext/files/: base.py  cli.py  command.py  config.py  config_declaration.yaml  exceptions.py  helpers.py  interfaces.py  plugin.py  shared.py  signals.py  task.py  types.py  utils.py  views.py
ckanext/files/assets/: resource.config  script.js  webassets.yml
ckanext/files/assets/js/: files--queue.js  files--shared.js  files--uploader.js
ckanext/files/assets/scripts/: files--google-cloud-storage-uploader.d.ts  files--google-cloud-storage-uploader.js  files--modules.js  files--queue.js  files--queue.ts  files--s3.js  files--shared-uploader.js  files--shared.d.ts  files--shared.js  files--shared.ts
ckanext/files/assets/styles/: files--style.css
ckanext/files/assets/ts/: adapters.ts  files--google-cloud-storage-uploader.ts  files--modules.ts  files--queue.ts  files--s3.ts  files--shared-uploader.ts  files--shared.ts  gcs.ts  init.ts  main.ts  (+10 more)
ckanext/files/cli/: __init__.py  dev.py  file.py  maintain.py  migrate.py  stats.py  storage.py
ckanext/files/logic/: action.py  auth.py  schema.py  validators.py
ckanext/files/model/: __init__.py  base.py  file.py  link.py  multipart.py  owner.py  transfer_history.py  upload.py
ckanext/files/storage/: __init__.py  azure.py  base.py  bashify_io.py  db.py  filebin.py  fs.py  google_cloud.py  libcloud.py  link.py  opendal.py  redis.py  s3.py
ckanext/files/templates/: page.html
ckanext/files/tests/: conftest.py  test_base.py  test_config.py  test_plugin.py  test_utils.py
ckanext/files_manager/: collection.py  plugin.py  views.py
ckanext/files_manager/assets/: webassets.yml
ckanext/files_uploader/: plugin.py
ckanext/files_uploader/tests/: conftest.py  test_plugin.py
cli/: index.html
configuration/: index.html
configuration/azure/: index.html
configuration/fs/: index.html
configuration/global/: index.html
configuration/libcloud/: index.html
configuration/link/: index.html
configuration/opendal/: index.html
configuration/redis/: index.html
configuration/s3/: index.html
configuration/storage/: index.html
cypress/: tsconfig.json
cypress/e2e/: sandbox.cy.ts
cypress/support/: commands.ts  e2e.ts
docs/: api.md  cli.md  implementation-example.md  installation.md  interfaces.md  primer.md  shared.md  upload-strategies.md  validators.md
docs/configuration/: azure.md  fs.md  global.md  index.md  libcloud.md  link.md  opendal.md  redis.md  s3.md
docs/configuration/storage/: index.md
docs/migration/: group.md  index.md  resource.md  user.md
docs/shared/: config.md  exceptions.md  index.md  types.md
docs/usage/: capabilities.md  configure.md  js.md  multi-storage.md  multipart.md  ownership.md  permissions.md  task-queue.md  tracked-files.md  transfer.md  upload-widget.md  use-in-browser.md  use-in-code.md
implementation-example/: index.html
installation/: index.html
interfaces/: index.html
migration/: index.html
migration/group/: index.html
migration/resource/: index.html
migration/user/: index.html
primer/: index.html
search/: search_index.json
shared/: index.html
shared/config/: index.html
shared/exceptions/: index.html
shared/types/: index.html
upload-strategies/: index.html
usage/capabilities/: index.html
usage/configure/: index.html
usage/js/: index.html
usage/multi-storage/: index.html
usage/multipart/: index.html
usage/ownership/: index.html
usage/permissions/: index.html
usage/task-queue/: index.html
usage/tracked-files/: index.html
usage/transfer/: index.html
usage/upload-widget/: index.html
usage/use-in-browser/: index.html
usage/use-in-code/: index.html
validators/: index.html
(+62 files in other folders)
