[metadata]
name = ckanext-files
version = 1.0.0a0
description =
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/DataShades/ckanext-files
author = Sergey Motornyuk
author_email = sergey.motornyuk@linkdigital.com.au
license = AGPL
classifiers =
	    Development Status :: 4 - Beta
	    License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)
	    Programming Language :: Python :: 3.8
	    Programming Language :: Python :: 3.9
	    Programming Language :: Python :: 3.10
	    Programming Language :: Python :: 3.11
	    Programming Language :: Python :: 3.12
keywords =
	 CKAN

[options]
python_requires = >= 3.8
install_requires =
		 typing_extensions

packages = find:
namespace_packages = ckanext
include_package_data = True

[options.extras_require]
test =
     pytest-ckan
     pytest-cov
     pytest-faker
     freezegun
     responses

dev =
    %(test)s

gcs =
    google-cloud-storage

[options.entry_points]
ckan.plugins =
             files = ckanext.files.plugin:FilesPlugin
             file_manager = ckanext.file_manager.plugin:FileManagerPlugin

babel.extractors =
                 ckan = ckan.lib.extract:extract_ckan

[extract_messages]
keywords = translate isPlural
add_comments = TRANSLATORS:
output_file = ckanext/files/i18n/ckanext-files.pot
width = 80

[init_catalog]
domain = ckanext-files
input_file = ckanext/files/i18n/ckanext-files.pot
output_dir = ckanext/files/i18n

[update_catalog]
domain = ckanext-files
input_file = ckanext/files/i18n/ckanext-files.pot
output_dir = ckanext/files/i18n
previous = true

[compile_catalog]
domain = ckanext-files
directory = ckanext/files/i18n
statistics = true

[tool:pytest]
filterwarnings =
        ignore::sqlalchemy.exc.SADeprecationWarning
        ignore::sqlalchemy.exc.SAWarning
        ignore::DeprecationWarning
addopts = --ckan-ini test.ini
