[options]
namespace_packages = ckanext

[extract_messages]
keywords = translate isPlural
add_comments = TRANSLATORS:
output_file = ckanext/files/i18n/ckanext-files.pot
width = 80

[init_catalog]
domain = ckanext-files
input_file = ckanext/files/i18n/ckanext-files.pot
output_dir = ckanext/files/i18n

[update_catalog]
domain = ckanext-files
input_file = ckanext/files/i18n/ckanext-files.pot
output_dir = ckanext/files/i18n
previous = true

[compile_catalog]
domain = ckanext-files
directory = ckanext/files/i18n
statistics = true
